# MatSuite

./: BALANCE.algol  INSTALL  Makefile  Makefile.in  README.md  TODO  config.status  configure  configure.ac  mslib.cpp
autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
doc/: Makefile  Makefile.am  Makefile.in
doc/html/: annotated.html  classes.html  files.html  globals.html  globals_func.html  index.html  mslib_8h.html  mslib_8h_source.html  structCell-members.html  structCell.html  structCmplx-members.html  structCmplx.html  structHamiltonian-members.html  structHamiltonian.html
doc/html/search/: all_0.js  all_1.js  all_2.js  files_0.js  functions_0.js  functions_1.js  (+1 more)
doc/latex/: annotated.tex  files.tex  mslib_8h.tex  refman.tex  structCell.tex  structCmplx.tex  structHamiltonian.tex
examples/: addtest.cpp  multtest.cpp  testlib.cpp
lib/: TODO  mslib  mslib.c  mslib.cpp  mslib.h  multtest.cpp  test  testlib.cpp  testlib.h
man/: Makefile  Makefile.am  Makefile.in
notes/from vb/: FT_vic.m  IFT_vic.m  hos_qtt.m  pot.m  qtt_fft1_v.m  qtt_fft_v.m
old/: mslib.cpp  mslib.h
pseudocode/: BALANCE.algol  PADE_APPROX.pseudo
scripts/: oldtests.c.old  speedtests.c  test3.m  test3.m~
src/: .nfs000000000a50476200005533  Makefile  Makefile.am  Makefile.in  mslib.c  mslib.h  speedtests.c  speedtests.imp1.c  speedtests.imp2.c  test  test1  test2
src/.deps/: mslib.Po  speedtests.Po
src/graphs/: .~lock.1000_10000_50_1000_test.ods#  1000_10000_50_1000_test.ods
writeup/: Presentation.odp  writeup.aux  writeup.out  writeup.tex
(+9 files in other folders)
