AC_INIT([matsuite], [0.1])
AM_INIT_AUTOMAKE([foreign subdir-objects])
AC_CONFIG_SRCDIR([configure.ac])
#AC_CONFIG_HEADERS([config.h])     # not even really needed
AC_PROG_CC                        # or AC_PROG_CXX
AC_PROG_CXX
AC_CONFIG_FILES([Makefile doc/Makefile man/Makefile src/Makefile])
AC_OUTPUT
